--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
-        </div>
+          <button id="copy" class="btn">Copy Password</button
       </div>
     </div>
     <script src="./assets/js/script.js"></script>
